[workspace]
members = ["constant-factors", "big-o-plot", "constant-factors2", "plots/n_square", "six_odd_numbers", "transcription", "recursion_factorial", "recursion_fibonacci", "reputation_score", "map-storage", "password-encryption", "random-number-seed", "random-number", "person-fit"]
resolver = "2"


[workspace.dependencies]
plotters = "0.3.6"
